Inference Pipeline Implementation.ipynb notebook added and supporting files in exercise_10 folder
WandB experiment tracking notebook added, showing functionality avaiable

hydra sweeps file added with examples ofu using hydra for config management of hyperparameter sweeps.

--- a/Inference Pipeline Implementation.ipynb
+++ b/Inference Pipeline Implementation.ipynb
@@ -288,6 +288,81 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Pipeline implementation in PyTorch"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "## example\n",
+    "\n",
+    "import torch\n",
+    "from torchvision import transforms\n",
+    "from torch.nn import Sequential, Softmax\n",
+    "from PIL import Image\n",
+    "import numpy as np\n",
+    "\n",
+    "# Get a pre-trained model\n",
+    "model = torch.hub.load('pytorch/vision:v0.9.0', 'resnet18', pretrained=True)\n",
+    "model.eval()\n",
+    "\n",
+    "# Define the inference pipeline\n",
+    "pipe = Sequential(\n",
+    "    # NOTE: for the pipeline to be scriptable with script,\n",
+    "    # you must use a list [256, 256] instead of just one number (256)\n",
+    "    transforms.Resize([256, 256]),\n",
+    "    transforms.CenterCrop([224, 224]),\n",
+    "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225]),\n",
+    "    model,\n",
+    "    Softmax(1)\n",
+    ")\n",
+    "\n",
+    "# Save inference artifact using torch.script\n",
+    "scripted = torch.jit.script(pipe)\n",
+    "scripted.save(\"inference_artifact.pt\")\n",
+    "\n",
+    "# NOTE: normally we would upload it to the artifact store\n",
+    "\n",
+    "# Load inference artifact\n",
+    "pipe_reload = torch.jit.load(\"inference_artifact.pt\")\n",
+    "\n",
+    "# Load one example\n",
+    "# NOTE: these operations are usually taken care by the inference\n",
+    "# engine\n",
+    "img = Image.open(\"dog.jpg\")\n",
+    "img.load()\n",
+    "# Make into a batch of 1 element\n",
+    "data = transforms.ToTensor()(np.asarray(img, dtype=\"uint8\").copy()).unsqueeze(0)\n",
+    "\n",
+    "# Perform inference\n",
+    "with torch.no_grad():\n",
+    "    logits = pipe_reload(data).detach()\n",
+    "\n",
+    "proba = logits[0]\n",
+    "\n",
+    "# Transform to class and print answer\n",
+    "with open(\"imagenet_classes.txt\", \"r\") as f:\n",
+    "    classes = [s.strip() for s in f.readlines()]\n",
+    "print(f\"Classification: {classes[proba.argmax()]}\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
